updated, home page, search page, working on modifying company ads page

--- a/client/src/components/ResetData/ResetData.css
+++ b/client/src/components/ResetData/ResetData.css
@@ -3,7 +3,12 @@
   padding: 10px;
 }
 
-.result-tiem {
+.result-item {
   padding-top: 10px;
   
+}
+
+.resetdata-qty {
+  font-weight: bold;
+  margin-left: 5px;
 }
