--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -1,5 +1,22 @@
 
 
+.home-p {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.home-top {
+    margin-top: 25px;
+}
+
+.home-h3 {
+    font-size: 40px;
+}
+
+.home-h1 {
+    font-size: 60px;
+}
+
 .admin-header {
-    background: lightgray;
+    padding: 25px;
 }
