--- a/client/src/components/AllKeywordsList/AllKeywordsList.css
+++ b/client/src/components/AllKeywordsList/AllKeywordsList.css
@@ -8,9 +8,11 @@
 .info-title {
   /* text-decoration: underline; */
   color: blue;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .info-box {
-  background: rgb(117, 116, 116);
+  background: rgb(191, 234, 247);
   border: 1px solid black;
 }
