--- a/client/src/components/AdminForm/AdminForm.css
+++ b/client/src/components/AdminForm/AdminForm.css
@@ -8,3 +8,26 @@
   margin-bottom: 5px;
   width: 100%;
 }
+
+.adminform-title {
+  font-size: 30px;
+  font-weight: bolder;
+  
+}
+
+.adminform-label {
+  font-size: 18px;
+}
+
+.adminform-co-name {
+  width: 50%;
+}
+
+.adminform-prop {
+  font-weight: bolder;
+  margin-left: 5px;
+}
+
+.adminform-input {
+margin-left: 8px;
+}
