--- a/client/src/components/AllAdsList/AllAdsList.css
+++ b/client/src/components/AllAdsList/AllAdsList.css
@@ -1,10 +1,31 @@
-.form {
-  margin: 20px;
+
+
+.alladslist-title {
+  font-size: 30px;
+  font-weight: bolder;
 }
 
-.form input {
-  display: block;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  width: 100%;
+.alladslist-form {
+  margin-top: 20px;
+}
+
+.alladslist-co {
+  font-size: 20px;
+  font-weight: bold;
+  color: blue;
+  
+}
+
+.alladslist-btn {
+  margin-left: 10px;
+}
+
+.delete {
+  background: red;
+  color: white;
+}
+
+.alladslist-li {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
