--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -1,10 +1,15 @@
-.form {
-  margin: 20px;
+
+
+.list-li {
+  margin-top: 15px;
+  color: black;
+  font-weight: bolder;
+  font-size: 20px;
+
 }
 
-.form input {
-  display: block;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  width: 100%;
+.list-company {
+  color: blue;
+  font-size: 20px;
+  font-weight: bold;
 }
