--- a/client/src/components/NewAdForm/NewAdForm.css
+++ b/client/src/components/NewAdForm/NewAdForm.css
@@ -8,3 +8,12 @@
   margin-bottom: 5px;
   width: 100%;
 }
+
+.newadform-label {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.newadform-input {
+  margin-left: 10px;
+}
